# datamations

./: .gitignore  pyproject.toml
notebooks/: Datamations.ipynb
src/datamations/: README.md  __init__.py  datamation_frame.py  datamation_groupby.py  small_salary.py  types.py  utils.py
tests/: conftest.py  test_datamation_frame.py  test_datamation_groupby.py  test_small_salary.py
